# jogo-tecnicas-programacao

./: .gitignore  CMakeLists.txt  DiagramaJogo.mdj  DiagramaJogoProgresso.mdj  Makefile  README.md  game  main  main.cpp  ranking.txt  run-game
Includes/: background_manager.hpp  base.hpp  botao.hpp  ente.hpp  entidade.hpp  estado.hpp  fase.hpp  jogo.hpp  menu.hpp  menu_jogadores.hpp  ranking.hpp
Includes/Entidades/: entidade.hpp  obstaculo.hpp  personagem.hpp  projetil.hpp
Includes/Entidades/Obstaculos/: arbusto.hpp  fogo.hpp  obstaculo.hpp  obstaculoA.hpp  obstaculoB.hpp  parede.hpp  pedra.hpp  plataforma.hpp
Includes/Entidades/Personagens/: inimigo.hpp  jogador.hpp  jogador1.hpp  jogador2.hpp  personagem.hpp
Includes/Entidades/Personagens/Inimigos/: carlosjohnson.hpp  inimigo.hpp  inimigo2.hpp  inimigoA.hpp  (+4 more)
Includes/Fases/: fase.hpp  fase1.hpp  fase2.hpp
Includes/Gerenciadores/: gerenciador_colisoes.hpp  gerenciador_eventos.hpp  gerenciador_grafico.hpp
Includes/listas/: lista_circular.hpp  lista_entidades.hpp  lista_texturas.hpp
cmake_modules/: FindSFML.cmake
src/: background_manager.cpp  base.cpp  botao.cpp  ente.cpp  estado.cpp  jogo.cpp  menu.cpp  menu_jogadores.cpp  ranking.cpp
src/entidades/: entidade.cpp  projetil.cpp
src/entidades/obstaculos/: arbusto.cpp  fogo.cpp  obstaculo.cpp  parede.cpp  plataforma.cpp
src/entidades/personagens/: jogador.cpp  jogador1.cpp  jogador2.cpp  personagem.cpp
src/fases/: fase.cpp  fase1.cpp  fase2.cpp
src/gerenciadores/: gerenciador_colisoes.cpp  gerenciador_eventos.cpp  gerenciador_grafico.cpp
(+6 files in other folders)
